--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [macos-latest, ubuntu-latest, windows-latest]
+        platform: [ubuntu-latest]
+#        platform: [macos-latest, ubuntu-latest, windows-latest]
 
     runs-on: ${{ matrix.platform }}
     steps:
@@ -25,6 +26,12 @@ jobs:
         sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf
     - name: install dependencies
       run: cargo install tauri-cli
-    - name: build it for ubuntu
+    - name: build it
       run: cargo tauri build
+    - name: build it for raspberry pi
+      if: matrix.platform == 'ubuntu-latest'
+      run: |
+        sudo apt install gcc-arm-linux-gnueabihf
+        rustup target add armv7-unknown-linux-gnueabihf
+        cargo tauri build -t armv7-unknown-linux-gnueabihf
 
