--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,13 +27,13 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf
     - name: install dependencies
-      run: cargo install tauri-cli && $ cargo install cross --git https://github.com/cross-rs/cross
+      run: cargo install tauri-cli && cargo install cross --git https://github.com/cross-rs/cross
     - name: build it
       run: cargo tauri build
     - name: build it for raspberry pi
       if: matrix.platform == 'ubuntu-latest'
       run: |
+        cross build
 #        sudo apt install gcc-8-multilib-arm-linux-gnueabihf
 #        rustup target add armv7-unknown-linux-gnueabihf
-        cross-build
 
