--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,9 @@ jobs:
     - name: build it for raspberry pi
       if: matrix.platform == 'ubuntu-latest'
       run: |
+        readonly TARGET_ARCH=armv7-unknown-linux-gnueabihf
+        readonly LINK_FLAGS='-L /usr/arm-linux-gnueabihf/lib/ -L /usr/lib/arm-linux-gnueabihf/'
+        RUSTFLAGS=${LINK_FLAGS} cross build --release --target=${TARGET_ARCH}
         cross build
 #        sudo apt install gcc-8-multilib-arm-linux-gnueabihf
 #        rustup target add armv7-unknown-linux-gnueabihf
