--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,8 +28,8 @@ jobs:
         sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf
     - name: install dependencies
       run: cargo install cross --git https://github.com/cross-rs/cross
-    - name: build it
-      run: cargo tauri build
+#    - name: build it
+#      run: cargo tauri build
     - name: build it for raspberry pi
       if: matrix.platform == 'ubuntu-latest'
       run: |
