--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,13 +30,19 @@ jobs:
       run: cargo install cross --git https://github.com/cross-rs/cross
 #    - name: build it
 #      run: cargo tauri build
+
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Set up Docker Buildx
+      run: docker build -t rustcross:dbus-armhf
     - name: build it for raspberry pi
       if: matrix.platform == 'ubuntu-latest'
       run: |
         readonly TARGET_ARCH=armv7-unknown-linux-gnueabihf
         readonly LINK_FLAGS='-L /usr/arm-linux-gnueabihf/lib/ -L /usr/lib/arm-linux-gnueabihf/'
         RUSTFLAGS=${LINK_FLAGS} cross build --release --target=${TARGET_ARCH}
-        docker build -t rustcross:dbus-armhf .
         cross build
 #        sudo apt install gcc-8-multilib-arm-linux-gnueabihf
 #        rustup target add armv7-unknown-linux-gnueabihf
