--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
       uses: docker/setup-buildx-action@v1
 
     - name: Set up Docker Buildx
-      run: docker build -t rustcross:dbus-armhf
+      run: docker build -t rustcross:dbus-armhf .
     - name: build it for raspberry pi
       if: matrix.platform == 'ubuntu-latest'
       run: |
