--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,9 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf
     - name: install dependencies
-      run: cargo install cross --git https://github.com/cross-rs/cross
+      run: |
+        sudo apt install libssl-dev
+        cargo install cross --git https://github.com/cross-rs/cross
 #    - name: build it
 #      run: cargo tauri build
 
