--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,11 +32,7 @@ jobs:
 #    - name: build it
 #      run: cargo tauri build
 
-    - name: Set up Docker Buildx
-      id: buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Set up Docker Buildx
+    - name: build docker image
       run: docker system prune && docker build -t rustcross:dbus-armhf .
     - name: build it for raspberry pi
       if: matrix.platform == 'ubuntu-latest'
