--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
 #      run: cargo tauri build
 
     - name: build docker image
-      run: docker system prune && docker build -t rustcross:dbus-armhf .
+      run: docker system prune && docker build --no-cache -t rustcross:dbus-armhf .
     - name: build it for raspberry pi
       if: matrix.platform == 'ubuntu-latest'
       run: |
