--- a/Cross.toml
+++ b/Cross.toml
@@ -1,5 +1,5 @@
 [target.armv7-unknown-linux-gnueabihf]
-image = "rustcross:dbus-armhf"
+image = "seranth/cross-tauri-armv7"
 
 [build.env]
 passthrough = [
